--- a/k-means_2d_solution.ipynb
+++ b/k-means_2d_solution.ipynb
@@ -61,8 +61,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc996c4b-15e7-4c9a-ab59-6c7d67ee8f10",
+   "metadata": {},
+   "source": [
+    "### Outline of the k-means clustering algorithm.\n",
+    "\n",
+    "    - Decide on the number of clusters K.\n",
+    "\n",
+    "    - Select K of the data points randomly and let those be the initial centers for the clusters. The 365 Data Science article calls those points the clusters’ seeds so I’ll follow suit.\n",
+    "\n",
+    "    - Assign each of the data points (including those that were randomly chosen to be the initial seeds) to the nearest seed. The points assigned to a seed define a cluster.\n",
+    "\n",
+    "    - For each cluster, calculate the centroid of the points in that cluster and move the cluster’s seed to that centroid’s location. (In Figure 1, each cluster has a different color. The fat point in each cluster is its seed.)\n",
+    "\n",
+    "    - Repeat steps 3 and 4 until the seeds become stable and don’t move around too much during each iteration.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 130,
    "id": "bb8b4625",
    "metadata": {},
    "outputs": [],
@@ -70,7 +88,7 @@
     "import math\n",
     "import numpy as np\n",
     "import copy\n",
-    "\n",
+    "from pprint import pprint\n",
     "class DataPoint:\n",
     "    POINT_RADIUS = 2\n",
     "    POINT_COLOR = 'black'\n",
@@ -88,6 +106,12 @@
     "            x - self.radius, y - self.radius, x + self.radius, y + self.radius,\n",
     "            fill=self.color, outline=self.color)\n",
     "\n",
+    "    def __str__(self):\n",
+    "        return f'x= {self.x} y= {self.y} seed= {self.seed} color= {self.color}'\n",
+    "  \n",
+    "    def __repr__(self):\n",
+    "       return f'x= {self.x} y= {self.y} seed= {self.seed} color= {self.color}'\n",
+    "  \n",
     "    # Set the DataPoint's color.\n",
     "    def set_color(self, color):\n",
     "        self.color = color\n",
@@ -105,15 +129,8 @@
     "    # the point’s seed property to the closest seed.\n",
     "    def assign_seed(self, seeds):\n",
     "        if len(seeds) > 0:\n",
-    "            cls = min(seeds, key=lambda seed: math.hypot(self.y-seed.y, self.x-seed.x))\n",
-    "            closest = [0, 0]\n",
-    "            idx = 0\n",
-    "            for i, seed in enumerate(seeds):\n",
-    "                if seed.x > closest[0]:\n",
-    "                    closest[0] = seed.x\n",
-    "                    closest[1] = seed.y\n",
-    "                    idx = i\n",
-    "            self.seed = seeds[idx]   \n",
+    "            closest = min(seeds, key=lambda seed: math.hypot(self.y-seed.y, self.x-seed.x))\n",
+    "            self.seed = closest   \n",
     "            self.set_color(self.seed.color)\n",
     "\n",
     "    # Reposition this seed given its currently assigned data points.\n",
@@ -124,23 +141,28 @@
     "        total_x = 0\n",
     "        total_y = 0\n",
     "        num_assigned = 0\n",
-    "        x = np.mean([point.x for point in points])\n",
-    "        y = np.mean([point.y for point in points])\n",
     "        for data_point in points:\n",
     "            # See if this point is assigned to this seed.\n",
     "            if data_point.seed == self:\n",
-    "                data_point.seed.x = x            \n",
-    "                data_point.seed.y = y\n",
+    "                num_assigned += 1\n",
+    "                total_x += data_point.x\n",
+    "                total_y += data_point.y\n",
+    "                \n",
     "        # See how far we moved.\n",
     "        distance_moved = 0\n",
-    "        num_assigned = len(points)\n",
     "        # Divide by the number of points assigned to this seed.\n",
-    "        if num_assigned > 0:\n",
-    "    \n",
+    "        if num_assigned > 0:   \n",
     "            # Make the point move its oval to the new location.\n",
-    "            data_point = DataPoint(self.canvas, self.x, self.y)\n",
+    "\n",
+    "            new_x = total_x / num_assigned\n",
+    "            new_y = total_y / num_assigned\n",
+    "            dx = self.x - new_x\n",
+    "            dy = self.y - new_y\n",
+    "            distance_moved = math.sqrt(dx * dx + dy * dy)\n",
+    "            self.x = new_x\n",
+    "            self.y = new_y\n",
+    "        \n",
     "            self.move()\n",
-    "            distance_moved = self.distance(data_point)\n",
     "    \n",
     "        # Return the distance moved.\n",
     "        return distance_moved\n",
@@ -153,29 +175,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "0d9cc01a-17d6-43d2-95ff-50fa008e83e9",
+   "cell_type": "markdown",
+   "id": "c4a2cce7-90a9-46b0-b5f9-63b7813e98c5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 8, 1, 2, 8, 5, 5, 7, 4, 0])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.random.randint(10, size=10)"
+    "## Test Harness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 131,
+   "id": "d70f0537-ada8-41fd-b66f-76d7281462c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Geometry constants.\n",
+    "WINDOW_WID = 500\n",
+    "WINDOW_HGT = 300\n",
+    "MARGIN = 5\n",
+    "CANVAS_WID = WINDOW_WID - 200\n",
+    "CANVAS_HGT = WINDOW_HGT - 2 * MARGIN\n",
+    "SEED_RADIUS = 5\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "canvas = tk.Canvas(window, bg='white',\n",
+    "    borderwidth=1, highlightthickness=0,\n",
+    "    width=CANVAS_WID, height=CANVAS_HGT)\n",
+    "canvas.pack(side=tk.LEFT, padx=MARGIN, pady=MARGIN)\n",
+    "# canvas.bind('<Button-1>', left_click)\n",
+    "\n",
+    "data_points = [\n",
+    "    DataPoint(canvas, 139, 31),\n",
+    "    DataPoint(canvas, 127, 60),\n",
+    "    DataPoint(canvas, 137, 117),\n",
+    "    DataPoint(canvas, 137, 160),\n",
+    "    DataPoint(canvas, 147, 120),\n",
+    "    DataPoint(canvas, 115, 96),\n",
+    "    DataPoint(canvas, 141, 90),\n",
+    "    DataPoint(canvas, 152, 60),\n",
+    "    DataPoint(canvas, 156, 112),\n",
+    "    DataPoint(canvas, 123, 74),\n",
+    "    DataPoint(canvas, 68, 241),\n",
+    "    DataPoint(canvas, 80, 228),\n",
+    "    DataPoint(canvas, 115, 249),\n",
+    "    DataPoint(canvas, 135, 240),\n",
+    "    DataPoint(canvas, 155, 219),\n",
+    "    DataPoint(canvas, 169, 242),\n",
+    "    DataPoint(canvas, 193, 248),\n",
+    "    DataPoint(canvas, 120, 219),\n",
+    "    DataPoint(canvas, 155, 255),\n",
+    "    DataPoint(canvas, 211, 229),\n",
+    "    DataPoint(canvas, 190, 221),\n",
+    "    DataPoint(canvas, 245, 232),\n",
+    "]\n",
+    "\n",
+    "colors = [\n",
+    "    'red', 'lightgreen', 'blue', 'pink', 'green',\n",
+    "    'lightblue', 'cyan', 'magenta', 'yellow', 'orange',\n",
+    "    'gray'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "832e000d-55cc-40b9-8bd4-90903ffbcca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_clusters = 3\n",
+    "random_points = random.sample(data_points, num_clusters)\n",
+    "\n",
+    "\"\"\"Loop through the selected objects by index and copy them into the new seeds list. \n",
+    "Use SEED_RADIUS as the new seed’s radius and use colors[i] as its color. \"\"\"\n",
+    "\n",
+    "seeds = []\n",
+    "\n",
+    "for i, rp in enumerate(random_points):\n",
+    "    new_seed = DataPoint(canvas, random_points[i].x, random_points[i].y, SEED_RADIUS, colors[i])\n",
+    "    seeds.append(new_seed)\n",
+    "    \n",
+    "for point in data_points:\n",
+    "    point.assign_seed(seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "5d85fa8c-2348-4d63-9818-654ca82151b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.44986927436389\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_move = 0\n",
+    "        \n",
+    "for seed in seeds:\n",
+    "    distance_moved = seed.reposition_seed(data_points)\n",
+    "    if distance_moved > max_move:\n",
+    "        max_move = distance_moved\n",
+    "\n",
+    "print(max_move)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "535581af-491c-41b5-9e7e-3a8e6153f790",
+   "metadata": {},
+   "source": [
+    "## Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "5a75320c",
    "metadata": {},
    "outputs": [],
@@ -648,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 121,
    "id": "72f55f49",
    "metadata": {},
    "outputs": [
@@ -658,6 +777,15 @@
      "text": [
       "\n",
       "Tick 1\n",
+      "46.605354067722494 1\n",
+      "running= True\n",
+      "Tick 2\n",
+      "6.261179986913981 1\n",
+      "running= True\n",
+      "Tick 3\n",
+      "4.723567483890254 1\n",
+      "running= True\n",
+      "Tick 4\n",
       "0 1\n",
       "running= False\n"
      ]
@@ -665,10 +793,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.App at 0x7fdf495fef70>"
+       "<__main__.App object at 0x7fdf4939cdc0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
