--- a/k-means_2d_solution.ipynb
+++ b/k-means_2d_solution.ipynb
@@ -135,6 +135,10 @@
     "\n",
     "    # Reposition this seed given its currently assigned data points.\n",
     "    # Return the distance moved.\n",
+    "    # The function should loop through the points (in the points parameter) \n",
+    "    # and find their centroid. It should update the seed’s X and Y coordinates \n",
+    "    # to those of the centroid, call the point’s move method to move its oval to \n",
+    "    # the new location, and then return the distance that the seed moved. \n",
     "    def reposition_seed(self, points):\n",
     "        # Add up the assigned points' coordinates\n",
     "        # and count the points.\n",
