--- a/knn_digits_solution.ipynb
+++ b/knn_digits_solution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "ef952560",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "47a93e74",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "68bced29",
    "metadata": {
     "scrolled": true
@@ -313,16 +313,39 @@
       "K = 20, Success Rate = 87.5%\n",
       "K = 4, Success Rate = 98.0%\n",
       "Final K: 4\n",
-      "\n"
+      "\n",
+      "Digit: 1\n",
+      "Digit: 7\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 4\n",
+      "Digit: 8\n",
+      "Digit: 7\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 4\n",
+      "Digit: 4\n",
+      "Digit: 1\n",
+      "Digit: 4\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n",
+      "Digit: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.App at 0x7f3dd99bbf70>"
+       "<__main__.App at 0x7f87de9d3370>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
