--- a/naive_bayes_2d_solution.ipynb
+++ b/naive_bayes_2d_solution.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "ef952560",
    "metadata": {},
    "outputs": [],
@@ -86,8 +86,11 @@
     "            for property_num in range(len(properties)):\n",
     "                # passing it the property’s value, the means entry for this cluster number and property number, \n",
     "                # and the std_dev entry for this cluster number and property number. Multiply prob by the results.\n",
-    "                prob *= calculate_probability(properties[property_num], means[cluster_num], property_num)\n",
-    "\n",
+    "                prob *= calculate_probability(\n",
+    "                    properties[property_num],\n",
+    "                    means[cluster_num][property_num], \n",
+    "                    std_devs[cluster_num][property_num])\n",
+    "  \n",
     "            if DEBUG:\n",
     "                print(f'{cluster_names[cluster_num]} probability: {prob}')\n",
     "\n",
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "7b6c86a9",
    "metadata": {},
    "outputs": [],
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "47a93e74",
    "metadata": {},
    "outputs": [],
@@ -574,23 +577,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "68bced29",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.App at 0x7f47ae175f10>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "App()"
    ]
